# numerical_linear_algebra

./: .gitignore  .gitlab-ci.yml  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Mapping.md  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  main.cpp  numerical_algebra.sln  numerical_algebra.vcxproj  numerical_algebra.vcxproj.filters
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cmake-multi-platform.yml
CustomMath_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Array.cpp  Array.h  CMakeLists.txt  CholeskyMethod.cpp  CholeskyMethod.h  CustomMath.sln  CustomMath_lib.h  CustomMath_lib.vcxproj  CustomMath_lib.vcxproj.filters  GaussMethod.cpp  GaussMethod.h  Matrix.cpp  Matrix.h  base.h
CustomMath_lib/BisectMethod/: BisectMethod.cpp  BisectMethod.h
CustomMath_lib/CholeskyMethod/: Cholesky.cpp  Cholesky.h  CholeskyMethod.cpp  CholeskyMethod.h  Cholesky_Decomposition.cpp  Cholesky_Decomposition.h  Cholesky_LDLT.cpp  Cholesky_LDLT.h
CustomMath_lib/GaussMethod/: GaussMethod.h  LU.cpp  LU.h  LU_Decomposition.cpp  LU_Decomposition.h  LU_FP.cpp  LU_FP.h  LU_FP_Decomposition.cpp  LU_FP_Decomposition.h  LU_PP.cpp  LU_PP.h  LU_PP_Decomposition.cpp  LU_PP_Decomposition.h  TriangleMatrix.cpp  TriangleMatrix.h
CustomMath_lib/HessenbergMethod/: HessenbergMethod.cpp  HessenbergMethod.h
CustomMath_lib/HouseholderMethod/: Bidiagonalization.cpp  Bidiagonalization.h  HessenbergMethod.cpp  HessenbergMethod.h  HouseholderMethod.cpp  HouseholderMethod.h
CustomMath_lib/InfinityNorm/: InfinityNorm.cpp  InfinityNorm.h
CustomMath_lib/IterationMethod/: IterationMethod.cpp  IterationMethod.h  PowerIteration.cpp  PowerIteration.h
CustomMath_lib/JacobiMethod/: JacobiMethod.cpp  JacobiMethod.h
CustomMath_lib/Matrix/: Matrix.cpp  Matrix.h  MatrixOperations.cpp  MatrixProperties.cpp  MatrixSubOperations.cpp
CustomMath_lib/PowerIteration/: PowerIteration.cpp  PowerIteration.h
CustomMath_lib/QRMethod/: DoubleShiftQRMethod.cpp  DoubleShiftQRMethod.h  DoubleStepQRIteration.cpp  DoubleStepQRIteration.h  QRMethod.cpp  QRMethod.h
CustomMath_lib/SVDMethod/: SVDMethod.h
CustomMath_lib/Vector/: Vector.cpp  Vector.h
Doctest_tests/: ArrayTest.cpp  CMakeLists.txt  Doctest_tests_run.vcxproj  Doctest_tests_run.vcxproj.filters  GaussMethodTest.cpp  MatrixTest.cpp  VectorTest.cpp  doctest.h
Doctests/: CMakeLists.txt  GaussMethodTest.cpp  MatrixTest.cpp  README.md  VectorTest.cpp
Doctests/BaseTests/: MatrixTest.cpp  VectorTest.cpp
Doctests/GeneralTests/: GaussMethodTest.cpp  PowerIterationTest.cpp
Doctests/HomeworkTests/: HW1Test.cpp  HW2Test.cpp  HW3Test.cpp  HW4Test.cpp  HW5Test.cpp  HW6Test.cpp
Homeworks/: homework_1.cpp  homework_1.h  homework_2.cpp  homework_2.h  homework_3.cpp  homework_3.h  homework_3_data.cpp  homework_3_data.h  homework_4.cpp  homework_4.h  homework_5.cpp  homework_5.h  homework_6.cpp  homework_6.h
Mathematica/: README.md  homework_1.nb  homework_6.nb
Matlab/: README.md  homework_5.m
homeworks/: homework_1.cpp  homework_1.h  homework_2.cpp  homework_2.h  homework_3.cpp  homework_3.h  homework_4.cpp  homework_4.h  homework_5.cpp  homework_5.h  homework_6.cpp  homework_6.h
homeworks/reports/: .gitignore  README.md  report_3.typ  report_5.tex  report_6.tex  report_7.tex  report_8.tex
homeworks/reports/data/: report_4_output.txt  report_5_output.txt  report_7_output.txt  report_8_output.txt
includes/: NLAMethods.h
lib/: CMakeLists.txt  base.h
lib/BisectMethod/: BisectMethod.h
lib/CholeskyMethod/: CholeskyMethod.h  Cholesky_Decomposition.h  Cholesky_LDLT.h
lib/GaussMethod/: LU_Decomposition.h  LU_FP_Decomposition.cpp  LU_FP_Decomposition.h  LU_PP_Decomposition.cpp  LU_PP_Decomposition.h  TriangleMatrix.h
lib/HessenbergMethod/: HessenbergMethod.h
lib/HouseholderMethod/: Bidiagonalization.cpp  Bidiagonalization.h  HouseholderMethod.cpp  HouseholderMethod.h
lib/InfinityNorm/: InfinityNorm.cpp  InfinityNorm.h
lib/IterationMethod/: IterationMethod.cpp  IterationMethod.h
lib/JacobiMethod/: JacobiMethod.cpp  JacobiMethod.h
lib/Matrix/: Matrix.h  MatrixGenerations.cpp  MatrixOperations.cpp  MatrixProperties.cpp  MatrixSubOperations.cpp
lib/PowerIteration/: PowerIteration.cpp  PowerIteration.h
lib/QRMethod/: DoubleShiftQRMethod.cpp  DoubleShiftQRMethod.h  QRMethod.cpp  QRMethod.h
lib/SVDMethod/: SVDMethod.cpp  SVDMethod.h
lib/Vector/: Vector.cpp
reports/: README.md  report_1.typ  report_2.ipynb  report_2.typ  report_4.tex  report_6.tex
reports/data/: report_6_output.txt
src/: homework_1.cpp  homework_2.cpp  homework_3.cpp  homework_3_data.h  homework_4.cpp  homework_5.cpp  homework_6.cpp
tests/: CMakeLists.txt  README.md  doctest.h
tests/BaseTests/: MatrixTest.cpp  VectorTest.cpp
tests/GeneralTests/: GaussMethodTest.cpp  PowerIterationTest.cpp
tests/HomeworkTests/: HW1Test.cpp  HW2Test.cpp  HW3Test.cpp  HW4Test.cpp  HW5Test.cpp  HW6Test.cpp
tools/Mathematica/: homework_1.nb  homework_5.nb  homework_6.nb
tools/Matlab/: homework_5.m
writeups/: homework_1.typ
