cmake_minimum_required(VERSION 3.23)
project(numerical_linear_algebra)
set(CMAKE_CXX_STANDARD 23)

# STATIC stuff (Windows)
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  set(BUILD_FOR_WIN TRUE)
endif()
option(STATIC_BUILD "Build a static binary." ${BUILD_FOR_WIN})

if(STATIC_BUILD)
  set(CMAKE_EXE_LINKER_FLAGS "-static")
  set(CMAKE_FIND_LIBRARY_SUFFIXES ".a" CONFIG)
  set(BUILD_SHARED_LIBS OFF)
endif()

option(DEFINE_DEBUG "Define DEBUG macro" OFF)
if(DEFINE_DEBUG)
  add_definitions(-DDEBUG)
endif(DEFINE_DEBUG)

set(SOURCE_FILES main.cpp)
add_executable(numerical_linear_algebra ${SOURCE_FILES})
include_directories(lib)
target_link_libraries(numerical_linear_algebra nla_methods)
add_subdirectory(lib)
add_subdirectory(tests)
